--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,4 +1,4 @@
 <!-- start custom footer snippets -->
 <a href="/sitemap/">Sitemap</a>
-<a href="/terms/">Terms and Privacy Policy</a>
+<a href="/terms/"> Privacy Policy</a>
 <!-- end custom footer snippets -->
